added react template for front-end

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "mern-server",
+  "name": "mash-backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node server.js",
+    "client": "node scripts/start-client.js",
+    "start": "concurrently \"nodemon server.js\" \"npm run client\"",
+    "build": "node scripts/build.js",
+    "seed": "node scripts/seedDB.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "installDeps": "yarn && cd client && yarn"
   },
   "repository": {
     "type": "git",
@@ -16,6 +22,10 @@
     "url": "https://github.com/NES-Elliott/react-mash/issues"
   },
   "homepage": "https://github.com/NES-Elliott/react-mash#readme",
+  "devDependencies": {
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.11.0"
+  },
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
@@ -24,6 +34,7 @@
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "react-router-dom": "^4.1.2"
   }
 }
