--- a/package.json
+++ b/package.json
@@ -28,13 +28,20 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
-    "request": "^2.83.0",
-    "react-router-dom": "^4.1.2"
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "react-router-dom": "^4.1.2",
+    "request": "^2.83.0"
   }
 }
