added 4 different test to see which would bring results

--- a/NEW PROJECT/package.json
+++ b/NEW PROJECT/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "server": "node server.js",
-    "client": "node script/start-client.js",
+    "client": "node scripts/start-client.js",
     "start": "concurrently \"nodemon server.js\" \"npm run client\"",
     "build": "node scripts/build.js",
     "dev": "nodemon --use_strict server.js",
