--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "client": "node scripts/start-client.js",
     "start": "concurrently \"nodemon server.js\" \"npm run client\"",
     "build": "node scripts/build.js",
+    "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
     "dev": "nodemon --use_strict server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "installDeps": "yarn && cd client && yarn",
